@@ -86,7 +86,7 @@ $(WORKINGDIR)/rootpcms/$(1): $(foreach l,$($(1)_EX_USE) $($(1)_EX_FLAGS_USE_SOUR
 	@[ -d $$(@D) ] || $(CMD_mkdir) -p $$(@D) && $(CMD_touch) $$@
 endef
 
-define VectorizePCM
+define TargetPCM
 all_$(1)+=$4/$2/$3
 $4/$2/$3: $4/$3
 	@[ -d $$(@D) ] || $(CMD_mkdir) -p $$(@D) && $(CMD_ln) -sf ../$$(@F) $$@
@@ -111,7 +111,7 @@ $(7)/$$($(1)_pcm_name): $($(1)_objdir)/$(6)/$(2)r.cc
 	@[ -f $$< ] || $(CMD_rm) -f $$@
 $(WORKINGDIR)/rootpcms/$(2): $(7)/$$($(1)_pcm_name)
 	@[ -d $$(@D) ] || $(CMD_mkdir) -p $$(@D) && $(CMD_touch) $$@
-$$(foreach v,$($(1)_LOC_FLAGS_VECTORIZE),$$(eval $$(call VectorizePCM,$1,$$v,$$($(1)_pcm_name),$7)))
+$$(foreach v,$($(1)_LOC_FLAGS_TARGETS),$$(eval $$(call TargetPCM,$1,$$v,$$($(1)_pcm_name),$7)))
 endef
 $(WORKINGDIR)/classes/%:
 	@[ -d $(@D) ] || $(CMD_mkdir) -p $(@D) && $(CMD_touch) $@
