@@ -1,3 +1,6 @@
+2021-03-23 Shahzad Muzaffar  <@smuzaffar>
+	V06-01-20 Use TARGETS keyword instead of VECTOR(IZE) for micro-
+	instructions set builds
 2021-03-11 Shahzad Muzaffar  <@smuzaffar>
 	V06-01-19 Fixes for vectorization e.g. reuse dd4hep components from
 	the default build.
